--- a/.i3/config
+++ b/.i3/config
@@ -1,16 +1,14 @@
-#exec feh --bg-fill 
-
 set $mod Mod4
 
 font pango:DejaVu Sans Mono 8
 
 floating_modifier $mod
 
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec rxvt 
 
 bindsym $mod+Shift+q kill
 
-bindsym $mod+d exec dmenu_run -nb "#002b36" -nf "#657b83" -sb "#dc322f" -sf "#fdf6e3" -fn "DejaVu Sans Mono-10"
+bindsym $mod+d exec dmenu_run -nb "#002b36" -nf "#657b83" -sb "#dc322f" -sf "#fdf6e3" -fn "Dejavu Sans Mono-10"
 
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -32,27 +30,27 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 bindsym $mod+Shift+c reload
 
@@ -67,7 +65,8 @@ client.focused_inactive			#073642 #073642 #eee8d5 #eee8d5
 client.urgent				#dc322f #dc322f #fdf6e3 #dc322f
 
 bar {
-        status_command ~/scripts/conky-i3bar.sh
+        position top
+	status_command ~/scripts/conky-i3bar.sh
 	colors {
 		background		#000000
 		statusline		#eee8d5
